--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "vue-tsc": "^2.0.21"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vitejs/plugin-vue": "^5.1.3",
+    "pinia": "^2.1.7",
     "vue": "^3.4.38",
-    "vue-router": "^4.3.3",
-    "pinia": "^2.1.7"
+    "vue-router": "^4.3.3"
   }
 }
