--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@tailwindcss/forms": "^0.5.8",
     "@vitejs/plugin-vue": "^5.1.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
