--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
 
 development:
   <<: *default
-  database: rails_vue_template_development
+  database: code_challenge_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -56,7 +56,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: rails_vue_template_test
+  database: code_challenge_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: rails_vue_template_production
-  username: rails_vue_template
+  database: code_challenge_production
+  username: code_challenge
   password: <%= ENV["MOVIE_RATING_APP_DATABASE_PASSWORD"] %>
