--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/forms": "^0.5.8",
     "@vitejs/plugin-vue": "^5.1.3",
+    "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.38",
     "vue-router": "^4.3.3"
